refactor: liveness & readiness

--- a/docker/proof-server-chart/templates/proof-server-deployment.yaml
+++ b/docker/proof-server-chart/templates/proof-server-deployment.yaml
@@ -43,6 +43,12 @@ spec:
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 10
         name: proof-server
         ports:
         - containerPort: 8080
