refactor: pas s rust flags

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -53,7 +53,7 @@ RUN if [ "$LIGHT_CLIENT" = "aptos" ]; then \
         PACKAGE_NAME="ethereum-lc"; \
         RUSTFLAGS="-C target-cpu=native -C opt-level=3"; \
     fi && \
-    SHARD_SIZE=4194304 SHARD_BATCH_SIZE=0 SHARD_CHUNKING_MULTIPLIER=32 RECONSTRUCT_COMMITMENTS=false cargo +nightly build --release --bins -p $PACKAGE_NAME
+    SHARD_SIZE=4194304 SHARD_BATCH_SIZE=0 SHARD_CHUNKING_MULTIPLIER=32 RECONSTRUCT_COMMITMENTS=false RUSTFLAGS="$RUSTFLAGS" cargo +nightly build --release --bins -p $PACKAGE_NAME
 
 # Start a new stage from scratch
 FROM debian:stable-slim
