fix: fix stack overflow

--- a/docker/proof-server-chart/templates/proof-server-deployment.yaml
+++ b/docker/proof-server-chart/templates/proof-server-deployment.yaml
@@ -26,6 +26,8 @@ spec:
         env:
         - name: RUST_LOG
           value: {{ quote .Values.deployment.proofServer.env.rustLog }}
+        - name: RUST_MIN_STACK
+          value: {{ quote .Values.deployment.proofServer.env.rustMinStack }}
         - name: CONTAINER_ADDR
           valueFrom:
             fieldRef:
