--- a/docker/compose/docker-compose-proof-servers.yml
+++ b/docker/compose/docker-compose-proof-servers.yml
@@ -5,6 +5,8 @@ services:
     command: sh -c "/app/proof_server --mode \"single\" --addr ${PRIMARY_ADDR}:${PRIMARY_PORT}"
     environment:
       - RUST_LOG=debug
+      # Prevent stack overflow
+      - RUST_MIN_STACK=16777216
     restart: always
     ports:
       - "${PRIMARY_PORT}:${PRIMARY_PORT}"
