refactor: idle time limit load balancer + docs

--- a/docker/proof-server-chart/templates/proof-server-deployment.yaml
+++ b/docker/proof-server-chart/templates/proof-server-deployment.yaml
@@ -16,6 +16,7 @@ spec:
         app: proof-server
       {{- include "proof-server.selectorLabels" . | nindent 8 }}
     spec:
+      terminationGracePeriodSeconds: {{ .Values.deployment.proofServer.terminationGracePeriodSeconds }}
       nodeSelector:
         {{- toYaml .Values.deployment.proofServer.nodeSelector | nindent 8 }}
       containers:
