--- a/docker/proof-server-chart/templates/proof-server-service.yaml
+++ b/docker/proof-server-chart/templates/proof-server-service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: {{ include "proof-server.fullname" . }}-service
   labels:
   {{- include "proof-server.labels" . | nindent 4 }}
+  annotations:
+    {{- toYaml .Values.service.annotations | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   selector:
