--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -13,7 +13,6 @@ anyhow = "1.0.86"
 axum = "0.7.5"
 backoff = "0.4.0"
 base64 = "0.22.1"
-blake2 = "0.10.6"
 chrono = "0.4.38"
 clap = { version = "4.5.16", features = ["derive"] }
 env_logger = "0.11.5"
@@ -24,18 +23,15 @@ rand = "0.8.5"
 reqwest = "0.12.7"
 serde = "1.0.209"
 serde_json = "1.0.127"
-sha2 = "0.9"
 thiserror = "1.0.63"
 tokio = "1.39.2"
 uint = "0.9.5"
+hex = "0.4.3"
+sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
+blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
 
 # Sphinx dependencies
 sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
 sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
 sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
 sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
-
-[patch.crates-io]
-# Sphinx patch
-sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
-blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
