--- a/kadena/programs/longest-chain/Cargo.toml
+++ b/kadena/programs/longest-chain/Cargo.toml
@@ -8,8 +8,4 @@ license = "Apache-2.0"
 [dependencies]
 sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
 kadena-lc-core = { path = "../../core", package = "kadena-lc-core" }
-
-[patch.crates-io]
-# Sphinx patch
-#tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
-sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
+sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
