--- a/kadena/Cargo.toml
+++ b/kadena/Cargo.toml
@@ -20,6 +20,7 @@ env_logger = "0.11.5"
 getset = "0.1.2"
 glob = "0.3.1"
 log = "0.4.22"
+rand = "0.8.5"
 reqwest = "0.12.7"
 serde = "1.0.209"
 serde_json = "1.0.127"
