refactor: integrate review

--- a/docker/proof-server-chart/templates/proof-server-deployment.yaml
+++ b/docker/proof-server-chart/templates/proof-server-deployment.yaml
@@ -17,13 +17,17 @@ spec:
       {{- include "proof-server.selectorLabels" . | nindent 8 }}
     spec:
       terminationGracePeriodSeconds: {{ .Values.deployment.proofServer.terminationGracePeriodSeconds }}
+      # Node selector leveraged to ensure that the cluster dpeloys the pod on the
+      # correct hardware
       nodeSelector:
         {{- toYaml .Values.deployment.proofServer.nodeSelector | nindent 8 }}
       containers:
+      # Commend that runs the proof server
       - command:
         - sh
         - -c
         - /app/proof_server --mode "single" --addr ${CONTAINER_ADDR}:${CONTAINER_PORT}
+        # Environment variable mostly set to optimize the proof generation process
         env:
         - name: RUST_LOG
           value: {{ quote .Values.deployment.proofServer.env.rustLog }}
@@ -37,6 +41,7 @@ spec:
           value: {{ quote .Values.deployment.proofServer.env.shardChunkingMultiplier }}
         - name: RECONSTRUCT_COMMITMENTS
           value: {{ quote .Values.deployment.proofServer.env.reconstructCommitments }}
+        # Proof server will listen for incoming traffic at the given pod IP and port
         - name: CONTAINER_ADDR
           valueFrom:
             fieldRef:
@@ -48,15 +53,18 @@ spec:
         image: {{ .Values.deployment.proofServer.image.repository }}:{{ .Values.deployment.proofServer.image.tag
           | default .Chart.AppVersion }}
         imagePullPolicy: {{ .Values.deployment.proofServer.imagePullPolicy }}
+        # Liveness probe for k8s to know if the pod should be restarted
         livenessProbe:
           httpGet:
-            path: /health
+            path: {{ quote .Values.deployment.proofServer.livenessProbePath }}
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 5
+        # Readiness probe for k8s to know if the pod is ready to receive traffic, used
+        # to restrict one proog generation process per pod
         readinessProbe:
           httpGet:
-            path: /ready
+            path: {{ quote .Values.deployment.proofServer.readinessProbePath }}
             port: 8080
           initialDelaySeconds: 15
           periodSeconds: 10
