feat: helm chart (#228)
* feat: wip helm

* refactor: remove client from dockerfile

* feat: helm icon

* refactor: refactor helm & introduce eksctl conf

* refactor: helm with node selector

* refactor: external IP for cluster

* refactor: use published docker image

* refactor: fix command

* refactor: remove secondary dep

* refactor: proper comp config dockerfile

* refactor: remove not needed file

* refactor: always pull image

* refactor: pull image for docker compose

* refactor: docker compose file

* refactor: proper command

* refactor: liveness & readiness

* refactor: fix middleware

* refactor: pas s rust flags

* fix: fix stack overflow

* fix: stack limit as str & change build target

* refactor: lint

* fix: docker file

* refactor: change target for build

* refactor: idle time limit load balancer + docs

* refactor: lint

* docs: review typo fix

Co-authored-by: Samuel Burnham <45365069+samuelburnham@users.noreply.github.com>

* refactor: integrate review

---------

Co-authored-by: Samuel Burnham <45365069+samuelburnham@users.noreply.github.com>

--- a/docker/compose/docker-compose-proof-servers.yml
+++ b/docker/compose/docker-compose-proof-servers.yml
@@ -1,24 +1,12 @@
 services:
   server-primary:
-    build:
-      context: ../..
-      dockerfile: docker/Dockerfile
-    command: sh -c "/app/proof_server --mode "split" --addr ${PRIMARY_ADDR}:${PRIMARY_PORT} --snd-addr server-secondary:${SECONDARY_PORT}"
+    image: ghcr.io/argumentcomputer/ethereum-proof-server:latest
+    pull_policy: always
+    command: sh -c "/app/proof_server --mode \"single\" --addr ${PRIMARY_ADDR}:${PRIMARY_PORT}"
     environment:
       - RUST_LOG=debug
+      # Prevent stack overflow
+      - RUST_MIN_STACK=16777216
     restart: always
-    depends_on:
-      - server-secondary
     ports:
       - "${PRIMARY_PORT}:${PRIMARY_PORT}"
-
-  server-secondary:
-    build:
-      context: ../..
-      dockerfile: docker/Dockerfile
-    command: sh -c "/app/proof_server --mode "single" --addr ${SECONDARY_ADDR}:${SECONDARY_PORT}"
-    environment:
-      - RUST_LOG=debug
-    restart: always
-    ports:
-      - "${SECONDARY_PORT}:${SECONDARY_PORT}"
