--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "kadena/solidity/contracts/lib/forge-std"]
 	path = kadena/solidity/contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "kadena/solidity/contracts/lib/sphinx-contracts"]
+	path = kadena/solidity/contracts/lib/sphinx-contracts
+	url = https://github.com/lurk-lab/sphinx-contracts
+[submodule "kadena/solidity/contracts/lib/openzeppelin-contracts"]
+	path = kadena/solidity/contracts/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
