fix: fix behavior around uncles

--- a/kadena/core/Cargo.toml
+++ b/kadena/core/Cargo.toml
@@ -12,14 +12,12 @@ blake2 = { workspace = true }
 chrono = { workspace = true }
 getset = { workspace = true }
 thiserror = { workspace = true }
+rand = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, optional = true }
 sha2 = { workspace = true }
 uint = { workspace = true }
 
-[dev-dependencies]
-rand = { workspace = true }
-
 [features]
 default = []
-kadena = ["dep:serde_json"]
+kadena = ["dep:serde_json", "dep:rand"]
