ci: Add job for running Solidity unit tests from Kadena workspace

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -125,7 +125,7 @@ jobs:
         run: |
           find ${{ matrix.package }}/programs -type d -name "target" -prune -o -type f -name "Cargo.toml" -exec cargo deny --manifest-path {} check \;
 
-  solidity-unit-tests:
+  aptos-solidity-unit-tests:
     needs: changes
     runs-on: buildjet-16vcpu-ubuntu-2204
     if: needs.changes.outputs.aptos == 'true'
@@ -155,6 +155,37 @@ jobs:
         run: |
           forge test
         working-directory: ${{ github.workspace }}/aptos/solidity/contracts/
+
+  kadena-solidity-unit-tests:
+    needs: changes
+    runs-on: buildjet-16vcpu-ubuntu-2204
+    if: needs.changes.outputs.kadena == 'true'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: argumentcomputer/ci-workflows
+      - uses: ./.github/actions/ci-env
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          token: ${{ secrets.REPO_TOKEN }}
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+      - name: Check formatting
+        run: |
+          forge fmt --check
+        working-directory: ${{ github.workspace }}/kadena/solidity/contracts/
+      - name: Run Forge build
+        run: |
+          forge --version
+          forge build
+        working-directory: ${{ github.workspace }}/kadena/solidity/contracts/
+      - name: Run Forge tests
+        run: |
+          forge test
+        working-directory: ${{ github.workspace }}/kadena/solidity/contracts/
 
   move-tests:
     needs: changes
