Support manual release on `workflow_dispatch`

--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -1,4 +1,6 @@
 # Workflow to create a new tag release when a release branch is merged
+#
+# The `ci-workflows` tag release action can be found at https://github.com/argumentcomputer/ci-workflows/blob/main/.github/actions/tag-release/action.yml
 name: Tag release
 
 on:
@@ -6,12 +8,28 @@ on:
     types: [ closed ]
     branches:
       - release/*
+  workflow_dispatch:
+    inputs:
+      light-client:
+        description: 'Light client to release'
+        type: 'string'
+        required: true
+      release-branch:
+        description: 'Branch to release'
+        type: 'string'
+        required: true
+      version:
+        description: 'SemVer release version, e.g. `1.0.0`'
+        type: 'string'
+        required: true
 
 jobs:
   tag-bump:
     if: |
-      github.event.pull_request.merged == true &&
-      (startsWith(github.event.pull_request.head.ref, 'release-pr') || startsWith(github.event.pull_request.head.ref, 'patch/'))
+      (github.event.pull_request.merged == true &&
+      (startsWith(github.event.pull_request.head.ref, 'release-pr') ||
+      startsWith(github.event.pull_request.head.ref, 'patch/'))) ||
+      github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
       - name: Git config
@@ -26,11 +44,7 @@ jobs:
         with:
           repository: argumentcomputer/ci-workflows
           path: ci-workflows
-          # Remove after https://github.com/argumentcomputer/ci-workflows/pull/76 is merged
-          ref: release-workflow
-      - name: Get light client prefix from branch
-        run: |
-          echo "TAG_PREFIX=$(echo ${{ github.event.pull_request.base.ref }} | awk -F'[/\-]' '{ print $2 }')" | tee -a $GITHUB_ENV
+      # TODO: Refine changelog categories
       - name: Create changelog config
         run: |
           cat << 'EOF' > config.json
@@ -56,6 +70,23 @@ jobs:
             ]
           }
           EOF
+      - name: Get branch and version info
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            RELEASE_BRANCH=${{ github.event.pull_request.base.ref }}
+            # Get tag and version from PR title
+            TAG=$(echo '${{ github.event.pull_request.title }}' | awk '/Release/ {print $NF}' | tr -d '`')
+            LIGHT_CLIENT=${TAG%%-v*}
+            VERSION="${TAG#*-v}"
+          else
+            LIGHT_CLIENT=${{ inputs.light-client }}
+            RELEASE_BRANCH=${{ inputs.release-branch }}
+            VERSION=${{ inputs.version }}
+          fi
+
+          echo "LIGHT_CLIENT=$LIGHT_CLIENT" | tee -a $GITHUB_ENV
+          echo "RELEASE_BRANCH=$RELEASE_BRANCH" | tee -a $GITHUB_ENV
+          echo "VERSION=$VERSION" | tee -a $GITHUB_ENV
       - uses: tibdex/github-app-token@v2
         id: generate-token
         with:
@@ -64,6 +95,7 @@ jobs:
       - name: Publish release
         uses: ./ci-workflows/.github/actions/tag-release
         with:
-          tag-prefix: ${{ env.TAG_PREFIX }}
+          release-branch: ${{ env.RELEASE_BRANCH }}
+          version: ${{ env.VERSION }}
+          tag-prefix: ${{ env.LIGHT_CLIENT }}
           changelog-config-file: ./config.json
-
