--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -128,6 +128,7 @@ jobs:
   solidity-unit-tests:
     needs: changes
     runs-on: buildjet-16vcpu-ubuntu-2204
+    if: needs.changes.outputs.aptos == 'true' || needs.changes.outputs.kadena == 'true'
     strategy:
       fail-fast: false
       matrix:
@@ -142,23 +143,19 @@ jobs:
           submodules: recursive
           token: ${{ secrets.REPO_TOKEN }}
       - name: Install Foundry
-        if: ${{ matrix.directory == 'aptos' && needs.changes.outputs.aptos == 'true' || matrix.directory == 'kadena' && needs.changes.outputs.kadena == 'true' }}
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: nightly
       - name: Check formatting
-        if: ${{ matrix.directory == 'aptos' && needs.changes.outputs.aptos == 'true' || matrix.directory == 'kadena' && needs.changes.outputs.kadena == 'true' }}
         run: |
           forge fmt --check
         working-directory: ${{ github.workspace }}/${{ matrix.directory }}/solidity/contracts/
       - name: Run Forge build
-        if: ${{ matrix.directory == 'aptos' && needs.changes.outputs.aptos == 'true' || matrix.directory == 'kadena' && needs.changes.outputs.kadena == 'true' }}
         run: |
           forge --version
           forge build
         working-directory: ${{ github.workspace }}/${{ matrix.directory }}/solidity/contracts/
       - name: Run Forge tests
-        if: ${{ matrix.directory == 'aptos' && needs.changes.outputs.aptos == 'true' || matrix.directory == 'kadena' && needs.changes.outputs.kadena == 'true' }}
         run: |
           forge test
         working-directory: ${{ github.workspace }}/${{ matrix.directory }}/solidity/contracts/
